demo2/cel/ValidatingAdmissionPolicyBinding-too-many-replicas.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "hpa-too-many-replicas"
spec:
  policyName: "hpa-too-many-replicas"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
